--- a/css/screen.css
+++ b/css/screen.css
@@ -3,5 +3,15 @@
 @media screen and (min-width: 480px) {}
 
 body{
-	background-color: #DAA520
+	background-color: #DAA520;
+	text-align: center;
+}
+
+h1{
+	color: #000000;
+	font-weight:bold;
+}
+
+input {
+	width: 100%
 }
