--- a/css/screen.css
+++ b/css/screen.css
@@ -1,6 +1,6 @@
 /* Mobile */
 
-@media screen and (min-width: 480px) {}
+@media screen and (min-width: 450px) {}
 
 body{
 	background-color: #DAA520;
@@ -10,8 +10,43 @@ body{
 h1{
 	color: #000000;
 	font-weight:bold;
+	font-size: 60pt;
+	font-family: Helvetica;
 }
 
+h2{
+	color: #000000;
+	font-weight:bold;
+	font-size: 30pt;
+	font-family: Helvetica;
+}
+
+h3{
+	color: #000000;
+	font-size: 10pt;
+
+
 input {
-	width: 100%
+	width: 80%;
+}
+
+.input{
+	font-family:sans-serif;
+	font-size: 10pt;
+	color: #000000;
+	padding: 14px 20px;
+	margin-top: .5em;
+	
+}
+
+#phone_number{
+	color: #A9A9A9;
+}
+
+#birth_day{
+	color: #A9A9A9;
+}
+
+#e_mail{
+	color: #A9A9A9;
 }
